BugFix scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@
     }
 
     html, body {
-        width: 100vw;
-        height: 100vh;
+        /* width: 100vw; */
+        height: 100svh;
         text-align: center;
         font-family: Arial, Helvetica, sans-serif;
     }
@@ -87,14 +87,12 @@
 
     /* [MAIN] */
     main {
-        height: calc(100% - 160px);
-        min-height: 370px;
+        min-height: calc(100svh - 200px);
     }
 
     main section {
         margin: auto;
         width: 90%;
-        height: 100%;
         color: var(--third-color);
     }
 
@@ -106,13 +104,13 @@
     }
 
     main section iframe {
-        width: 90%;
-        height: 70%;
-        min-height: 150px;
+        width: 100%;
+        min-height: 380px;
         padding-right: 4px;
         border: 3px solid var(--third-color);
         border-radius: 12px;
         box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+        margin-bottom: 12px;
     }
 
 
